
- new config option to hide link previews (to hide link previews, use 'link_preview' => false)
- added support for endpoint discovery via http header; set the config option 'endpoint-discovery-via-header' to 'true'; this will become the default behavior in one of the following releases
- added support for indieauth endpoint discovery via 'indieauth-metadata'; set the config option 'indieauth-metadata' to 'true'; this will become the default behavior in one of the following releases
- added template name to body-class ('body.template-index' for overview, 'body.template-post' for detail view ..)
- better general compatibility with IndieAuth
- add_header() & remove_header() functions, to set http headers
- bugfixes & enhancements


v.0.1.4

- better handling of querying multiple link-previews
- webp support for link-preview images
- better link detection
- link preview refreshing without js is now disabled by default
- link preview: insert refreshed link info automatically, if link preview is below viewport
- get_config() helper function
- bugfixes & enhancements


v.0.1.3

- permission bugfix for the content folder and new posts on some hosts
- transparent png files are handled correctly, when the 'image_jpg_to_png' option is set to false (if it is set to true, which is the default, png images get converted to jpg and loose their transparency)
- you can set a background color for transparent images, when the 'image_jpg_to_png' option is set to true (which is the default); defaults to white background color
- https://www.example.com and http://www.example.com are now seen as the same user
- setup: add comments to .htaccess, at beginning and end of our block
- bugfixes & enhancements


v.0.1.2

- updater: fix for displaying relevant release information
- css & js files: start URL with '//' (instead of 'https://' or 'http://') to avoid mixed content
- don't delete .htaccess file on update
- bugfixes and enhancements


v.0.1.1
